--- a/badbank/index.html
+++ b/badbank/index.html
@@ -27,9 +27,10 @@
     <script src="login.js" defer type="text/babel"></script>
     <script src="deposit.js" defer type="text/babel"></script>
     <script src="withdraw.js" defer type="text/babel"></script>
-    <script src="balance.js" defer type="text/babel"></script>
     <script src="alldata.js" defer type="text/babel"></script>
     <script src="home.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
+    <script src="updatebalance.js" defer type="text/babel"></script>
+    <script src="userinfo.js" defer type="text/babel"></script>
   </body>
 </html>
